# unifying-events-set

./: CMakeLists.txt  app.cpp  app.h  event.h  eventdatabase.cpp  eventdatabase.h  markerformwidget.cpp  markerformwidget.h  markerinfowidget.cpp  markerinfowidget.h  markerwidget.cpp  markerwidget.h  session.cpp  session.h  user.h
